2004-09-15  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-loader.c: int -> unsigned int.
	* libexif/olympus/mnote-olympus-entry.c: typecast.
	  Both changes made to avoid compiler warnings.

2004-09-12  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by marcusmeissner@users.sourceforge.net: Some format string
	fixes, wrong argument list fixed, format string problems avoided.

2004-09-09  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: Remove "([external])" after AM_GNU_GETTEXT as it
	  doesn't work for David MacMahon <davidm@astro.berkeley.edu>.
	* libexif/exif-log.[c,h]: Provide some standard messages and titles.
	* configure.in: Increment version as interfaces have been added.

2004-09-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Change comment to point to specification.

2004-09-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Redirect error messages to the logging 
	  mechanism.
	* libexif/exif-log.h: EXIF_LOG_CODE_CORRUPT_DATA: New.

2004-09-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c
	* libexif/exif-data.c: Replace a couple of calls to malloc by 
	  calls to calloc.

2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Use calloc. Hint by Jan Patera
	  <patera@pictview.com>.

2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus
	* libexif/pentax: Fix typo and wrong logic introduced during my
	  last changes. Thanks to Jan Patera
	  <patera@pictview.com> for keeping an eye on me.

2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus
	* libexif/pentax
	* libexif/canon: Correctly return names, titles and descriptions of
	  tages. Pointed out by Angela Wrobel.

2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: More guards against malloc returning NULL.
	  Problem spotted by Angela Wrobel.

2004-09-02  Lutz Mueller <lutz@users.sourceforge.net>
